Done: - API First - GetEndpoint for single price - Hex Arch
